fix extra gap

--- a/src/mfa/styles.css
+++ b/src/mfa/styles.css
@@ -46,3 +46,7 @@
 #QrCodeVerifyInstruction {
   margin: 0;
 }
+
+.AuthenticatorInfoControl .attrEntry {
+  margin-top: 0;
+}
